--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,58 @@
-<p>
-  progress works!
-</p>
+<!-- ============================================================== -->
+<!-- Start Page Content -->
+<!-- ============================================================== -->
+<div class="row">
+  <div class="col-12">
+
+    <div class="card">
+      <div class="card-tittle">
+        <h3>
+          Progress Bar
+        </h3>
+      </div>
+      <div class="card-body">
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" [style.width]="progress1 + '%'"
+            [attr.ariaValuenow]="progress1" aria-valuemin="0" aria-valuemax="100">
+            {{ progress1 + '%'}}
+          </div>
+        </div>
+
+        <div class="my-4"></div>
+
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" [style.width]="progress2 + '%'"
+            [attr.ariaValuenow]="progress2" aria-valuemin="0" aria-valuemax="100">
+            {{ progress2 + '%'}}
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+
+    <div class="card">
+      <div class="card-body my-3">
+        <app-booster (changeValue)="progress1 = $event" [percentage]="progress1" label="Test 1"></app-booster>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="col-6">
+
+    <div class="card">
+      <div class="card-body my-3">
+        <app-booster (changeValue)="progress2 = $event" [percentage]="progress2" label="Test 2"></app-booster>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!-- ============================================================== -->
+<!-- End PAge Content -->
+<!-- ============================================================== -->
