routing and breadcrumbs control point

--- a/src/app/pages/rxjs/rxjs.component.html
+++ b/src/app/pages/rxjs/rxjs.component.html
@@ -8,8 +8,9 @@
       <div class="card-body">
 
         <p>
-          dashboard works!
+          rxjs works!
         </p>
+
 
       </div>
     </div>
