--- a/src/app/pages/promises/promises.component.html
+++ b/src/app/pages/promises/promises.component.html
@@ -8,8 +8,9 @@
       <div class="card-body">
 
         <p>
-          dashboard works!
+          promises works!
         </p>
+
 
       </div>
     </div>
