back end control point

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,6 +8,11 @@
   position: fixed;
 }
 
+.register-box {
+  width: 800px;
+  margin: 0 auto;
+}
+
 .login-box {
   width: 400px;
   margin: 0 auto;
