--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
               <a routerLinkActive="active" routerLink="/account-settings">Account Setting</a>
             </li>
             <li>
-              <a routerLink="/login">Logout</a>
+              <a class="pointer" (click)="logOut()">Cerrar sesión</a>
             </li>
           </ul>
         </li>
