--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -143,7 +143,7 @@
               <li role="separator" class="divider"></li>
               <li><a href="#"><i class="ti-settings"></i> Account Setting</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#"><i class="fa fa-power-off"></i> Logout</a></li>
+              <li class="pointer"><a (click)="logOut()"><i class="fa fa-power-off"></i> Salir</a></li>
             </ul>
           </div>
         </li>
